issue #129 Add ModelContext (#130)

--- a/model_definitions/python-diabetes/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Explore Diabetes.ipynb
@@ -77,26 +77,7 @@
    "source": [
     "# Dataset\n",
     "\n",
-    "The dataset is available to download from [nrvis](http://nrvis.com/data/mldata/pima-indians-diabetes.csv). If you are using the AOA Demo Instance, we already have this dataset preloaded into Teradata and split into test and train datasets. For reference, the code used was \n",
-    "\n",
-    "```python\n",
-    "import pandas as pd\n",
-    "from teradataml.dataframe.copy_to import copy_to_sql\n",
-    "from teradataml.context.context import get_connection\n",
-    "from teradataml.dataframe.dataframe import DataFrame\n",
-    "\n",
-    "df = pd.read_csv(\"http://nrvis.com/data/mldata/pima-indians-diabetes.csv\", header=None)\n",
-    "df.columns = [\n",
-    "    \"NumTimesPrg\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\", \"Age\", \"HasDiabetes\"]\n",
-    "\n",
-    "copy_to_sql(df = df, table_name = \"PIMA\", index=True, index_label=\"PatientId\", if_exists=\"replace\")\n",
-    "\n",
-    "df = DataFrame(\"PIMA\").sample(frac=[0.8, 0.2])\n",
-    "\n",
-    "copy_to_sql(df = df[df.sampleid==1], table_name = \"PIMA_TRAIN\", index=False, if_exists=\"replace\")\n",
-    "copy_to_sql(df = df[df.sampleid==2], table_name = \"PIMA_TEST\", index=False, if_exists=\"replace\")\n",
-    "\n",
-    "```"
+    "The dataset is available to download from [nrvis](http://nrvis.com/data/mldata/pima-indians-diabetes.csv). If you are using the AOA Demo Instance, we already have this dataset preloaded into Teradata.\n"
    ]
   },
   {
@@ -610,8 +591,19 @@
    "source": [
     "from teradataml.dataframe.dataframe import DataFrame\n",
     "\n",
-    "train_set = DataFrame(\"PIMA_TRAIN\").to_pandas()\n",
-    "test_set = DataFrame(\"PIMA_TEST\").to_pandas()"
+    "train_set = DataFrame.from_query(\"\"\"\n",
+    "SELECT * \n",
+    "FROM PIMA_PATIENT_FEATURES F JOIN PIMA_PATIENT_DIAGNOSES D\n",
+    "    ON F.patientid = D.patientid\n",
+    "    WHERE D.patientid MOD 5 <> 0\n",
+    "\"\"\").to_pandas()\n",
+    "\n",
+    "test_set = DataFrame(\"\"\"\n",
+    "SELECT * \n",
+    "FROM PIMA_PATIENT_FEATURES F JOIN PIMA_PATIENT_DIAGNOSES D\n",
+    "    ON F.patientid = D.patientid\n",
+    "    WHERE D.patientid MOD 5 = 0\n",
+    "\"\"\").to_pandas()"
    ]
   },
   {
@@ -1195,49 +1187,64 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from nyoka import xgboost_to_pmml\n",
-    "from teradataml import create_context\n",
-    "from teradataml.dataframe.dataframe import DataFrame\n",
+    "from teradataml import DataFrame\n",
+    "from aoa import (\n",
+    "    record_training_stats,\n",
+    "    save_plot,\n",
+    "    aoa_create_context,\n",
+    "    ModelContext\n",
+    ")\n",
     "\n",
     "import joblib\n",
-    "import os\n",
     "\n",
     "\n",
-    "def train(data_conf, model_conf, **kwargs):\n",
-    "    hyperparams = model_conf[\"hyperParameters\"]\n",
+    "def train(context: ModelContext, **kwargs):\n",
     "\n",
-    "    create_context(host=data_conf[\"host\"], username=os.environ['TD_USERNAME'], password=os.environ['TD_PASSWORD'])\n",
+    "    aoa_create_context()\n",
     "\n",
-    "    feature_names = [\"NumTimesPrg\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\", \"Age\"]\n",
-    "    target_name = \"HasDiabetes\"\n",
+    "    feature_names = context.dataset_info.feature_names\n",
+    "    target_name = context.dataset_info.target_names[0]\n",
     "\n",
     "    # read training dataset from Teradata and convert to pandas\n",
-    "    train_df = DataFrame(data_conf[\"table\"])\n",
-    "    train_df = train_df.select([feature_names + [target_name]])\n",
-    "    train_df = train_df.to_pandas()\n",
+    "    train_df = DataFrame.from_query(context.dataset_info.sql)\n",
+    "    train_pdf = train_df.to_pandas(all_rows=True)\n",
     "\n",
     "    # split data into X and y\n",
-    "    X_train = train_df.drop(target_name, 1)\n",
-    "    y_train = train_df[target_name]\n",
+    "    X_train = train_pdf.drop(target_name, 1)\n",
+    "    y_train = train_pdf[target_name]\n",
     "\n",
     "    print(\"Starting training...\")\n",
     "\n",
     "    # fit model to training data\n",
     "    model = Pipeline([('scaler', MinMaxScaler()),\n",
-    "                     ('xgb', XGBClassifier(eta=hyperparams[\"eta\"],\n",
-    "                                           max_depth=hyperparams[\"max_depth\"]))])\n",
-    "    # xgboost saves feature names but lets store on pipeline for easy access later\n",
-    "    model.feature_names = feature_names\n",
-    "    model.target_name = target_name\n",
+    "                      ('xgb', XGBClassifier(eta=context.hyperparams[\"eta\"],\n",
+    "                                            max_depth=context.hyperparams[\"max_depth\"]))])\n",
     "\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
     "    print(\"Finished training\")\n",
     "\n",
     "    # export model artefacts\n",
-    "    joblib.dump(model, \"artifacts/output/model.joblib\")\n",
-    "    xgboost_to_pmml(pipeline=model, col_names=feature_names, target_name=target_name, pmml_f_name=\"artifacts/output/model.pmml\")\n",
+    "    joblib.dump(model, f\"{context.artifact_output_path}/model.joblib\")\n",
     "\n",
-    "    print(\"Saved trained model\")"
+    "    # we can also save as pmml so it can be used for In-Vantage scoring etc.\n",
+    "    xgboost_to_pmml(pipeline=model, col_names=feature_names, target_name=target_name,\n",
+    "                    pmml_f_name=f\"{context.artifact_output_path}/model.pmml\")\n",
+    "\n",
+    "    print(\"Saved trained model\")\n",
+    "\n",
+    "    from xgboost import plot_importance\n",
+    "    model[\"xgb\"].get_booster().feature_names = feature_names\n",
+    "    plot_importance(model[\"xgb\"].get_booster(), max_num_features=10)\n",
+    "    save_plot(\"feature_importance.png\")\n",
+    "\n",
+    "    feature_importance = model[\"xgb\"].get_booster().get_score(importance_type=\"weight\")\n",
+    "\n",
+    "    record_training_stats(train_df,\n",
+    "                          features=feature_names,\n",
+    "                          predictors=[target_name],\n",
+    "                          categorical=[target_name],\n",
+    "                          importance=feature_importance)\n"
    ]
   },
   {
@@ -1255,22 +1262,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import aoa\n",
-    "from aoa import TrainModel, EvaluateModel\n",
-    "from aoa import ModelUtility\n",
+    "import aoa import ModelContext, DatasetInfo\n",
     "\n",
-    "model_util = ModelUtility(base_path=\"../../../\", repo_template_catalog=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.train(\n",
-    "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
-    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TRAIN'})"
+    "sql = \"\"\"\n",
+    "SELECT * \n",
+    "FROM PIMA_PATIENT_FEATURES F JOIN PIMA_PATIENT_DIAGNOSES D\n",
+    "    ON F.patientid = D.patientid\n",
+    "    WHERE D.patientid MOD 5 <> 0\n",
+    "\"\"\"\n",
+    "dataset_info = DatasetInfo(sql=sql,\n",
+    "                           entity_key=\"patientid\",\n",
+    "                           feature_names=[\"age\", \"...\"],\n",
+    "                           target_names=[\"hasdiabetes\"])\n",
+    "\n",
+    "ctx = ModelContext(dataset_info=dataset_info,\n",
+    "                   hyperparams={\"max_depth\": 5},\n",
+    "                   artifact_output_path=\"./\")\n",
+    "\n",
+    "train(context=ctx)"
    ]
   },
   {
@@ -1288,7 +1297,7 @@
     }
    ],
    "source": [
-    "!ls -l .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6/"
+    "!ls -l ./"
    ]
   },
   {
@@ -1312,44 +1321,40 @@
    "source": [
     "# %%writefile ../scoring.py\n",
     "from sklearn import metrics\n",
-    "from teradataml import create_context\n",
-    "from teradataml.dataframe.dataframe import DataFrame\n",
-    "from teradataml.dataframe.copy_to import copy_to_sql\n",
+    "from teradataml import DataFrame, copy_to_sql\n",
+    "from aoa import (\n",
+    "    record_evaluation_stats,\n",
+    "    save_plot,\n",
+    "    aoa_create_context,\n",
+    "    ModelContext\n",
+    ")\n",
     "\n",
-    "import os\n",
     "import joblib\n",
     "import json\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "\n",
-    "def save_plot(title):\n",
-    "    import matplotlib.pyplot as plt\n",
+    "def evaluate(context: ModelContext, **kwargs):\n",
     "\n",
-    "    plt.title(title)\n",
-    "    fig = plt.gcf()\n",
-    "    filename = title.replace(\" \", \"_\").lower()\n",
-    "    fig.savefig('artifacts/output/{}'.format(filename), dpi=500)\n",
-    "    plt.clf()\n",
+    "    aoa_create_context()\n",
     "\n",
+    "    model = joblib.load(f\"{context.artifact_input_path}/model.joblib\")\n",
     "\n",
-    "def evaluate(data_conf, model_conf, **kwargs):\n",
-    "    model = joblib.load('artifacts/input/model.joblib')\n",
+    "    feature_names = context.dataset_info.feature_names\n",
+    "    target_name = context.dataset_info.target_names[0]\n",
     "\n",
-    "    create_context(host=os.environ[\"AOA_CONN_HOST\"],\n",
-    "                   username=os.environ[\"AOA_CONN_USERNAME\"],\n",
-    "                   password=os.environ[\"AOA_CONN_PASSWORD\"])\n",
+    "    test_df = DataFrame.from_query(context.dataset_info.sql)\n",
+    "    test_pdf = test_df.to_pandas(all_rows=True)\n",
     "\n",
-    "    # Read test dataset from Teradata\n",
-    "    # As this is for demo purposes, we simulate the test dataset changing between executions\n",
-    "    # by introducing a random sample. Note that the sampling is performed in Teradata!\n",
-    "    test_df = DataFrame(data_conf[\"table\"]).sample(frac=0.8)\n",
-    "    test_df = test_df.to_pandas()\n",
-    "\n",
-    "    X_test = test_df[model.feature_names]\n",
-    "    y_test = test_df[model.target_name]\n",
+    "    X_test = test_pdf[feature_names]\n",
+    "    y_test = test_pdf[target_name]\n",
     "\n",
     "    print(\"Scoring\")\n",
-    "    y_pred = model.predict(test_df[model.feature_names])\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    y_pred_tdf = pd.DataFrame(y_pred, columns=[target_name])\n",
+    "    y_pred_tdf[\"PatientId\"] = test_pdf[\"PatientId\"].values\n",
     "\n",
     "    evaluation = {\n",
     "        'Accuracy': '{:.2f}'.format(metrics.accuracy_score(y_test, y_pred)),\n",
@@ -1358,7 +1363,7 @@
     "        'f1-score': '{:.2f}'.format(metrics.f1_score(y_test, y_pred))\n",
     "    }\n",
     "\n",
-    "    with open(\"artifacts/output/metrics.json\", \"w+\") as f:\n",
+    "    with open(f\"{context.artifact_output_path}/metrics.json\", \"w+\") as f:\n",
     "        json.dump(evaluation, f)\n",
     "\n",
     "    metrics.plot_confusion_matrix(model, X_test, y_test)\n",
@@ -1374,8 +1379,17 @@
     "    shap_values = shap_explainer.shap_values(X_test)\n",
     "\n",
     "    shap.summary_plot(shap_values, X_test, feature_names=model.feature_names,\n",
-    "                      show=False, plot_size=(12,8), plot_type='bar')\n",
+    "                      show=False, plot_size=(12, 8), plot_type='bar')\n",
     "    save_plot('SHAP Feature Importance')\n",
+    "\n",
+    "    feature_importance = pd.DataFrame(list(zip(model.feature_names, np.abs(shap_values).mean(0))),\n",
+    "                                      columns=['col_name', 'feature_importance_vals'])\n",
+    "    feature_importance = feature_importance.set_index(\"col_name\").T.to_dict(orient='records')[0]\n",
+    "\n",
+    "    predictions_table = \"evaluation_preds_tmp\"\n",
+    "    copy_to_sql(df=y_pred_tdf, table_name=predictions_table, index=False, if_exists=\"replace\", temporary=True)\n",
+    "\n",
+    "    record_evaluation_stats(test_df, DataFrame(predictions_table), feature_importance)\n",
     "\n"
    ]
   },
@@ -1403,9 +1417,22 @@
     }
    ],
    "source": [
-    "evaluate.evaluate(\n",
-    "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
-    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TEST', 'predictions': 'PIMA_PREDICTIONS'})"
+    "sql = \"\"\"\n",
+    "SELECT * \n",
+    "FROM PIMA_PATIENT_FEATURES F JOIN PIMA_PATIENT_DIAGNOSES D\n",
+    "    ON F.patientid = D.patientid\n",
+    "    WHERE D.patientid MOD 5 = 0\n",
+    "\"\"\"\n",
+    "dataset_info = DatasetInfo(sql=sql,\n",
+    "                           entity_key=\"patientid\",\n",
+    "                           feature_names=[\"age\", \"...\"],\n",
+    "                           target_names=[\"hasdiabetes\"])\n",
+    "\n",
+    "ctx = ModelContext(dataset_info=dataset_info,\n",
+    "                   hyperparams={\"max_depth\": 5},\n",
+    "                   artifact_output_path=\"./\")\n",
+    "\n",
+    "evaluate(context=ctx)"
    ]
   },
   {
@@ -1427,60 +1454,63 @@
    "outputs": [],
    "source": [
     "# %%writefile ../scoring.py\n",
-    "from sklearn import metrics\n",
-    "from teradataml import create_context\n",
-    "from teradataml.dataframe.dataframe import DataFrame\n",
-    "from teradataml.dataframe.copy_to import copy_to_sql\n",
+    "from teradataml import copy_to_sql, DataFrame\n",
+    "from aoa import (\n",
+    "    record_scoring_stats,\n",
+    "    aoa_create_context,\n",
+    "    ModelContext\n",
+    ")\n",
     "\n",
-    "import os\n",
     "import joblib\n",
-    "import json\n",
     "import pandas as pd\n",
     "\n",
     "\n",
-    "def score(data_conf, model_conf, **kwargs):\n",
-    "    model = joblib.load(\"artifacts/input/model.joblib\")\n",
+    "def score(context: ModelContext, **kwargs):\n",
     "\n",
-    "    create_context(host=os.environ[\"AOA_CONN_HOST\"],\n",
-    "                   username=os.environ[\"AOA_CONN_USERNAME\"],\n",
-    "                   password=os.environ[\"AOA_CONN_PASSWORD\"])\n",
+    "    aoa_create_context()\n",
     "\n",
-    "    predict_df = DataFrame(data_conf[\"table\"])\n",
+    "    model = joblib.load(f\"{context.artifact_input_path}/model.joblib\")\n",
     "\n",
-    "    # convert to pandas to use locally\n",
-    "    predict_df = predict_df.to_pandas()\n",
+    "    target_name = context.dataset_info.target_names[0]\n",
+    "\n",
+    "    features_tdf = DataFrame.from_query(context.dataset_info.sql)\n",
+    "    features_pdf = features_tdf.to_pandas(all_rows=True)\n",
     "\n",
     "    print(\"Scoring\")\n",
-    "    y_pred = model.predict(predict_df[model.feature_names])\n",
+    "    predictions_pdf = model.predict(features_pdf)\n",
     "\n",
     "    print(\"Finished Scoring\")\n",
     "\n",
-    "    # create result dataframe and store in Teradata\n",
-    "    y_pred = pd.DataFrame(y_pred, columns=[\"pred\"])\n",
-    "    y_pred[\"PatientId\"] = predict_df[\"PatientId\"].values\n",
-    "    copy_to_sql(df=y_pred, table_name=data_conf[\"predictions\"], index=False, if_exists=\"replace\")\n",
+    "    # store the predictions\n",
+    "    predictions_pdf = pd.DataFrame(predictions_pdf, columns=[target_name])\n",
+    "    predictions_pdf[\"PatientId\"] = features_pdf[\"PatientId\"].values\n",
+    "    predictions_pdf[\"job_id\"] = context.job_id\n",
     "\n",
-    "    \n",
+    "    copy_to_sql(df=predictions_pdf,\n",
+    "                schema_name=context.dataset_info.prediction_database,\n",
+    "                table_name=context.dataset_info.prediction_table,\n",
+    "                index=False,\n",
+    "                if_exists=\"append\")\n",
+    "\n",
+    "    # calculate stats\n",
+    "    predictions_df = DataFrame.from_query(f\"\"\"\n",
+    "        SELECT \n",
+    "            * \n",
+    "        FROM {context.dataset_info.prediction_database}.{context.dataset_info.prediction_table} \n",
+    "            WHERE job_id = '{context.job_id}'\n",
+    "    \"\"\")\n",
+    "\n",
+    "    record_scoring_stats(features_tdf, predictions_df)\n",
+    "\n",
+    "\n",
     "# Add code required for RESTful API\n",
     "class ModelScorer(object):\n",
     "\n",
-    "    def __init__(self, config=None):\n",
-    "        self.model = joblib.load('artifacts/input/model.joblib')\n",
-    "\n",
-    "        from prometheus_client import Counter\n",
-    "        self.pred_class_counter = Counter('model_prediction_classes',\n",
-    "                                          'Model Prediction Classes', ['model', 'version', 'clazz'])\n",
+    "    def __init__(self):\n",
+    "        self.model = joblib.load(\"artifacts/input/model.joblib\")\n",
     "\n",
     "    def predict(self, data):\n",
-    "        pred = self.model.predict([data])\n",
-    "\n",
-    "        # record the predicted class so we can check model drift (via class distributions)\n",
-    "        self.pred_class_counter.labels(model=os.environ[\"MODEL_NAME\"],\n",
-    "                                       version=os.environ.get(\"MODEL_VERSION\", \"1.0\"),\n",
-    "                                       clazz=str(int(pred))).inc()\n",
-    "\n",
-    "        return pred\n",
-    "\n"
+    "        return self.model.predict(data)\n"
    ]
   },
   {
@@ -1489,9 +1519,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_util.batch_score_model_local(\n",
-    "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
-    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TEST', 'predictions': 'PIMA_PREDICTIONS'})"
+    "sql = \"\"\"\n",
+    "SELECT * \n",
+    "FROM PIMA_PATIENT_FEATURES F \n",
+    "    WHERE D.patientid MOD 5 = 0\n",
+    "\"\"\"\n",
+    "dataset_info = DatasetInfo(sql=sql,\n",
+    "                           entity_key=\"patientid\",\n",
+    "                           feature_names=[\"age\", \"...\"],\n",
+    "                           target_names=[\"hasdiabetes\"])\n",
+    "\n",
+    "ctx = ModelContext(dataset_info=dataset_info,\n",
+    "                   hyperparams={\"max_depth\": 5},\n",
+    "                   artifact_output_path=\"./\")\n",
+    "\n",
+    "score(context=ctx)"
    ]
   },
   {
