--- a/model_definitions/python-diabetes/notebooks/BYOM Scoring.ipynb
+++ b/model_definitions/python-diabetes/notebooks/BYOM Scoring.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Password········\n"
+      "Password ··········\n"
      ]
     },
     {
@@ -56,7 +56,7 @@
        "Engine(teradatasql://AOA_DEMO:***@3.238.151.85)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,46 +113,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bae7d4c0-7fe3-4bed-9b02-88ea89f22c76</td>\n",
-       "      <td>f33ce7a2-bae0-45f6-a591-d44b6ce2f5ed</td>\n",
+       "      <td>6f2c99e6-8d05-48e3-953d-bd37ace233b1</td>\n",
+       "      <td>bb5fc499-2112-41e1-9ad2-5ce82ba73645</td>\n",
        "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2021-05-04 10:38:43.340</td>\n",
+       "      <td>2022-05-12 19:25:10.980</td>\n",
        "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "      <td>PMML</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ecc94c5c-52ae-46f9-8ec8-d60fdf9651a9</td>\n",
-       "      <td>784c44e2-0fcb-4ce3-a50a-db78c297d46c</td>\n",
+       "      <td>f49d7cab-ac18-446f-8b26-69f378e7ebe3</td>\n",
+       "      <td>9dd16228-957c-4cc2-bb99-56a3e25fa671</td>\n",
        "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2021-10-20 10:39:56.440</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
-       "      <td>PMML</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>d31afa67-e0be-4922-a2ce-c57493135b18</td>\n",
-       "      <td>b59270e8-da0a-4311-96b4-1969da31277c</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2021-05-19 21:29:52.940</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
-       "      <td>PMML</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>778be4dc-0a74-4b25-b497-0692bbde1b62</td>\n",
-       "      <td>7a34e23a-d278-4a39-a5e5-c0366bef5b71</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2021-06-09 14:39:00.630</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
-       "      <td>PMML</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4d2eb148-7783-4785-8377-c23ded6940fa</td>\n",
-       "      <td>18fbf390-5398-459a-859f-bccf392c480f</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2021-04-06 11:45:34.860</td>\n",
+       "      <td>2022-05-12 19:59:06.980</td>\n",
        "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "      <td>PMML</td>\n",
        "    </tr>\n",
@@ -162,35 +135,23 @@
       ],
       "text/plain": [
        "                          model_version                              model_id  \\\n",
-       "0  bae7d4c0-7fe3-4bed-9b02-88ea89f22c76  f33ce7a2-bae0-45f6-a591-d44b6ce2f5ed   \n",
-       "1  ecc94c5c-52ae-46f9-8ec8-d60fdf9651a9  784c44e2-0fcb-4ce3-a50a-db78c297d46c   \n",
-       "2  d31afa67-e0be-4922-a2ce-c57493135b18  b59270e8-da0a-4311-96b4-1969da31277c   \n",
-       "3  778be4dc-0a74-4b25-b497-0692bbde1b62  7a34e23a-d278-4a39-a5e5-c0366bef5b71   \n",
-       "4  4d2eb148-7783-4785-8377-c23ded6940fa  18fbf390-5398-459a-859f-bccf392c480f   \n",
+       "0  6f2c99e6-8d05-48e3-953d-bd37ace233b1  bb5fc499-2112-41e1-9ad2-5ce82ba73645   \n",
+       "1  f49d7cab-ac18-446f-8b26-69f378e7ebe3  9dd16228-957c-4cc2-bb99-56a3e25fa671   \n",
        "\n",
        "                             project_id             deployed_at  \\\n",
-       "0  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2021-05-04 10:38:43.340   \n",
-       "1  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2021-10-20 10:39:56.440   \n",
-       "2  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2021-05-19 21:29:52.940   \n",
-       "3  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2021-06-09 14:39:00.630   \n",
-       "4  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2021-04-06 11:45:34.860   \n",
+       "0  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-05-12 19:25:10.980   \n",
+       "1  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-05-12 19:59:06.980   \n",
        "\n",
        "                                                                                                                                                                                                                                                       model  \\\n",
        "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
        "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
-       "2  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
-       "3  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
-       "4  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...   \n",
        "\n",
        "  model_type  \n",
        "0       PMML  \n",
-       "1       PMML  \n",
-       "2       PMML  \n",
-       "3       PMML  \n",
-       "4       PMML  "
+       "1       PMML  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +290,7 @@
        "9   {\"probability_0\":0.7477334297352949,\"predicted_HasDiabetes\":0,\"probability_1\":0.25226657026470506}  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,9 +298,11 @@
    "source": [
     "configure.byom_install_location = \"mldb\"\n",
     "\n",
-    "model = DataFrame.from_query(\"\"\"\n",
+    "model_version=\"6f2c99e6-8d05-48e3-953d-bd37ace233b1\"\n",
+    "\n",
+    "model = DataFrame.from_query(f\"\"\"\n",
     "SELECT * FROM aoa_ivsm_models \n",
-    "    WHERE model_version='bae7d4c0-7fe3-4bed-9b02-88ea89f22c76'\n",
+    "    WHERE model_version='{model_version}'\n",
     "\"\"\")\n",
     "\n",
     "\n",
@@ -353,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,61 +350,61 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>{\"probability_0\":0.9850747504768098,\"probability_1\":0.014925249523190227,\"predicted_HasDiabetes\":0}</td>\n",
+       "      <td>{\"probability_0\":0.9850747504768098,\"predicted_HasDiabetes\":0,\"probability_1\":0.014925249523190227}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>{\"probability_0\":0.9945255942085638,\"probability_1\":0.005474405791436156,\"predicted_HasDiabetes\":0}</td>\n",
+       "      <td>{\"probability_0\":0.9945255942085638,\"predicted_HasDiabetes\":0,\"probability_1\":0.005474405791436156}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.05020155260184678,\"probability_1\":0.9497984473981532,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.05020155260184678,\"predicted_HasDiabetes\":1,\"probability_1\":0.9497984473981532}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>9</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.28263442350828416,\"probability_1\":0.7173655764917158,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.28263442350828416,\"predicted_HasDiabetes\":1,\"probability_1\":0.7173655764917158}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>13</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.08177880479006427,\"probability_1\":0.9182211952099357,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.08177880479006427,\"predicted_HasDiabetes\":1,\"probability_1\":0.9182211952099357}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>17</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.23832592730256774,\"probability_1\":0.7616740726974323,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.23832592730256774,\"predicted_HasDiabetes\":1,\"probability_1\":0.7616740726974323}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.37077762620144294,\"probability_1\":0.629222373798557,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.37077762620144294,\"predicted_HasDiabetes\":1,\"probability_1\":0.629222373798557}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>26</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.18449399225529128,\"probability_1\":0.8155060077447087,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.18449399225529128,\"predicted_HasDiabetes\":1,\"probability_1\":0.8155060077447087}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>43</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.006277949339332567,\"probability_1\":0.9937220506606674,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>{\"probability_0\":0.006277949339332567,\"predicted_HasDiabetes\":1,\"probability_1\":0.9937220506606674}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>44</td>\n",
        "      <td>0</td>\n",
-       "      <td>{\"probability_0\":0.7477334297352949,\"probability_1\":0.25226657026470506,\"predicted_HasDiabetes\":0}</td>\n",
+       "      <td>{\"probability_0\":0.7477334297352949,\"predicted_HasDiabetes\":0,\"probability_1\":0.25226657026470506}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -461,29 +424,29 @@
        "9         44          0   \n",
        "\n",
        "                                                                                           json_report  \n",
-       "0  {\"probability_0\":0.9850747504768098,\"probability_1\":0.014925249523190227,\"predicted_HasDiabetes\":0}  \n",
-       "1  {\"probability_0\":0.9945255942085638,\"probability_1\":0.005474405791436156,\"predicted_HasDiabetes\":0}  \n",
-       "2   {\"probability_0\":0.05020155260184678,\"probability_1\":0.9497984473981532,\"predicted_HasDiabetes\":1}  \n",
-       "3   {\"probability_0\":0.28263442350828416,\"probability_1\":0.7173655764917158,\"predicted_HasDiabetes\":1}  \n",
-       "4   {\"probability_0\":0.08177880479006427,\"probability_1\":0.9182211952099357,\"predicted_HasDiabetes\":1}  \n",
-       "5   {\"probability_0\":0.23832592730256774,\"probability_1\":0.7616740726974323,\"predicted_HasDiabetes\":1}  \n",
-       "6    {\"probability_0\":0.37077762620144294,\"probability_1\":0.629222373798557,\"predicted_HasDiabetes\":1}  \n",
-       "7   {\"probability_0\":0.18449399225529128,\"probability_1\":0.8155060077447087,\"predicted_HasDiabetes\":1}  \n",
-       "8  {\"probability_0\":0.006277949339332567,\"probability_1\":0.9937220506606674,\"predicted_HasDiabetes\":1}  \n",
-       "9   {\"probability_0\":0.7477334297352949,\"probability_1\":0.25226657026470506,\"predicted_HasDiabetes\":0}  "
+       "0  {\"probability_0\":0.9850747504768098,\"predicted_HasDiabetes\":0,\"probability_1\":0.014925249523190227}  \n",
+       "1  {\"probability_0\":0.9945255942085638,\"predicted_HasDiabetes\":0,\"probability_1\":0.005474405791436156}  \n",
+       "2   {\"probability_0\":0.05020155260184678,\"predicted_HasDiabetes\":1,\"probability_1\":0.9497984473981532}  \n",
+       "3   {\"probability_0\":0.28263442350828416,\"predicted_HasDiabetes\":1,\"probability_1\":0.7173655764917158}  \n",
+       "4   {\"probability_0\":0.08177880479006427,\"predicted_HasDiabetes\":1,\"probability_1\":0.9182211952099357}  \n",
+       "5   {\"probability_0\":0.23832592730256774,\"predicted_HasDiabetes\":1,\"probability_1\":0.7616740726974323}  \n",
+       "6    {\"probability_0\":0.37077762620144294,\"predicted_HasDiabetes\":1,\"probability_1\":0.629222373798557}  \n",
+       "7   {\"probability_0\":0.18449399225529128,\"predicted_HasDiabetes\":1,\"probability_1\":0.8155060077447087}  \n",
+       "8  {\"probability_0\":0.006277949339332567,\"predicted_HasDiabetes\":1,\"probability_1\":0.9937220506606674}  \n",
+       "9   {\"probability_0\":0.7477334297352949,\"predicted_HasDiabetes\":0,\"probability_1\":0.25226657026470506}  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"\"\"\n",
+    "query = f\"\"\"\n",
     "SELECT * FROM mldb.PMMLPredict (\n",
     "    ON (SELECT * FROM pima_test) AS DataTable\n",
     "    ON (SELECT * FROM aoa_ivsm_models \n",
-    "            WHERE model_version='bae7d4c0-7fe3-4bed-9b02-88ea89f22c76') AS ModelTable DIMENSION\n",
+    "            WHERE model_version='{model_version}') AS ModelTable DIMENSION\n",
     "    USING\n",
     "      Accumulate ('patientid')\n",
     ") AS td;\n",
@@ -502,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -516,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
